Remove max-height constraint from side nav toggle indicator
Changed the `max-height` property of the `&:has( > .tnt-side-nav-group-toggle-indicator .tnt-toggle)` selector from `100vh` to `unset`. This allows the element to expand without being limited to the viewport height.

--- a/TnTComponents/Styles/TnTComponents/_layout.scss
+++ b/TnTComponents/Styles/TnTComponents/_layout.scss
@@ -124,7 +124,7 @@
         }
 
         &:has( > .tnt-side-nav-group-toggle-indicator .tnt-toggle) {
-            max-height: 100vh;
+            max-height: unset;
 
             .tnt-side-nav-menu-group-button {
                 .tnt-end-icon {
