--- a/TnTComponents/Styles/TnTComponents/_scheduler.scss
+++ b/TnTComponents/Styles/TnTComponents/_scheduler.scss
@@ -26,6 +26,7 @@ $hour-offset: $cell-height;
         top: 0;
         left: 0;
         z-index: 7;
+        padding: 4px;
 
         .today-button {
             padding: 0 16px;
