Update TnTTypeahead component and add new parameters
Updated TnTTypeahead.razor to include TnTComponents.Interfaces
namespace and implement ITnTInteractable interface. Changed base
class from TnTInteractableComponentBase to TnTComponentBase.

Added new parameters to TnTTypeahead<TItem> in TnTTypeahead.razor.cs:
- Disabled (bool): Indicates whether the component is disabled.
- ElementName (string?): Represents the name of the element.
- EnableRipple (bool): Indicates whether the ripple effect is enabled.
- OnTintColor (TnTColor?): Represents the color when the component
  is active.
- TintColor (TnTColor?): Represents the default color of the component.

--- a/TnTComponents/Typeahead/TnTTypeahead.razor
+++ b/TnTComponents/Typeahead/TnTTypeahead.razor
@@ -1,9 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Components.Rendering
 @using TnTComponents
 @using TnTComponents.Core
+@using TnTComponents.Interfaces
 @namespace TnTComponents
 @typeparam TItem
-@inherits TnTInteractableComponentBase
+@inherits TnTComponentBase
+@implements ITnTInteractable
 
 <div @attributes="AdditionalAttributes"
      class="@ElementClass"
