Refactor TnTLazyLoad component and code-behind
Updated TnTLazyLoad.razor to implement IAsyncDisposable, inherit from TnTPageScriptComponent<TnTLazyLoad>, and use Element reference. Replaced <TnTPageScript Src="@_jsModulePath" /> with @PageScript.

Refactored TnTLazyLoad.razor.cs by removing unnecessary properties and JSRuntime injection, relocating _jsModulePath constant, adding property overrides, and removing lifecycle methods. Updated BeginLoad method to use new _beginLoad field.

--- a/TnTComponents/LazyLoader/TnTLazyLoad.razor
+++ b/TnTComponents/LazyLoader/TnTLazyLoad.razor
@@ -1,10 +1,10 @@
 ﻿@using TnTComponents.Core
-@implements IAsyncDisposable
 @namespace TnTComponents
+@inherits TnTPageScriptComponent<TnTLazyLoad>
 
 @if (!_beginLoad)
 {
-    <div @ref="_element">
+    <div @ref="Element">
         @LoadingContent
     </div>
 }
@@ -13,5 +13,4 @@
 {
     @ChildContent
 }
-
-<TnTPageScript Src="@_jsModulePath" />
+@PageScript
