Refactor icon rendering and improve component flexibility
Refactored `StartIcon` and `EndIcon` properties in several components (`TnTChip`, `TnTInputBase`, `TnTInputRadio`, `TnTInputRadioGroup`) to use `RenderFragment<TnTIcon>?` for more flexible icon rendering with Blazor. Removed unnecessary `AdditionalClass` property and `Render` method calls, directly adding icons to the builder using `builder.AddContent`.

Updated `MaterialIcon` class to remove `AdditionalClass` property and `BuildRenderTree` method override, added constructors, and implicit conversion to string. Modified `TnTIcon` class to change base class, remove certain properties, add constructors, and implicit conversion to string.

Made minor formatting change in `BasicConfirmationDialog.razor` and set `Icon` parameter directly in `TnTDialog.cs`. Updated `TnTLayout.razor` and `TnTLayout.razor.cs` to use `@PageScript` directive and specify JavaScript module path. Refactored `TnTTypeahead.razor` for better readability and structure.

These changes enhance component flexibility, performance, and code simplicity.

--- a/TnTComponents/Layout/TnTLayout.razor
+++ b/TnTComponents/Layout/TnTLayout.razor
@@ -1,8 +1,8 @@
 ﻿@using TnTComponents.Core
-@inherits TnTComponentBase
+@inherits TnTPageScriptComponent<TnTLayout>
 @namespace TnTComponents
 
 <div @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle" lang="@ElementLang" id="@ElementId" title="@ElementTitle" @ref="Element">
     @ChildContent
 </div>
-<TnTPageScript Src="./_content/TnTComponents/Layout/TnTLayout.razor.js" />
+@PageScript
