Enhance TnTInputBase and update icon rendering
- Introduced new properties and methods to `TnTInputBase<TInputType>` to enhance functionality and documentation.
- Added XML documentation comments to improve code readability and maintainability.
- Changed `StartIcon` and `EndIcon` types from `RenderFragment<TnTIcon>?` to `TnTIcon?` in `TnTInputBase<TInputType>` and `TnTInputRadio<TInputType>`.
- Updated rendering logic for `StartIcon` and `EndIcon` to use the `Render` method.
- Added private methods for handling attributes and validation in `TnTInputBase<TInputType>`.
- Simplified the `Render` method in the `TnTIcon` class.
- Updated `TnTTypeahead.razor` to set `StartIcon` property directly.

--- a/TnTComponents/Typeahead/TnTTypeahead.razor
+++ b/TnTComponents/Typeahead/TnTTypeahead.razor
@@ -26,12 +26,9 @@
                       BindAfter="SearchAsync"
                       Disabled="@Disabled"
                       BackgroundColor="BackgroundColor"
+                      StartIcon="@MaterialIcon.Search"
                       @onkeydown="SelectOrShiftFocusAsync"
-                      @ref="_inputBox">
-                  <StartIcon>
-                      <MaterialIcon Icon="@MaterialIcon.Search" />
-                  </StartIcon>
-        </TnTInputText>
+                      @ref="_inputBox" />
         <TnTProgressIndicator Show="@_searching" ProgressColor="ProgressColor" Size="Size.Small" />
     </span>
     @if (_items.Any() || (!_items.Any() && !string.IsNullOrWhiteSpace(_searchText) && !_searching))
