--- a/TnTComponents/Styles/TnTComponents/_datagrid.scss
+++ b/TnTComponents/Styles/TnTComponents/_datagrid.scss
@@ -100,7 +100,24 @@
 
             td {
                 box-sizing: border-box;
-                padding: 0.16px 4px;
+                padding: 2px 4px;
+
+                &.grid-cell-placeholder:empty {
+                    position: relative;
+
+                    &:before {
+                        height: 80%;
+                        width: 95%;
+                        top: 10%;
+                        left: 2.5%;
+                        display: block;
+                        position: absolute;
+                        content: '';
+                        background: linear-gradient(to right, $tnt-color-surface-container-highest 33%, color-mix(in srgb, $tnt-color-surface-container-highest 60%, $tnt-color-background) 50%, $tnt-color-surface-container-highest 66%);
+                        background-size: 300%;
+                        animation: empty-grid-cell-animation 1.5s infinite ease-in-out;
+                    }
+                }
             }
         }
     }
@@ -129,5 +146,15 @@
         td:not(:first-child), th:not(:first-child) {
             border-left: 1px solid color-mix(in srgb, $tnt-color-outline 20%, $tnt-color-surface);
         }
+    }
+}
+
+@keyframes empty-grid-cell-animation {
+    0% {
+        background-position: 100%;
+    }
+
+    100% {
+        background-position: 0%;
     }
 }
