Update styles and add new DiaryNote DTOs
Modified _buttons.scss to update .tnt-fab styling, extending the loop and applying transform properties. Introduced .tnt-tab-child class for similar styling.

Added DiaryNoteCategoryId record struct in DiaryNoteCategoryId.cs with CategoryId, Name, and Selectable properties.

Added DiaryNoteDto record in DiaryNoteDto.cs with DiaryNoteId, Category, NoteDate, Description, and CreatedBy properties.

--- a/TnTComponents/Styles/TnTComponents/_buttons.scss
+++ b/TnTComponents/Styles/TnTComponents/_buttons.scss
@@ -90,8 +90,14 @@ body:has(.tnt-footer) {
 }
 
 
-//@for $i from 1 through 5 {
-//    .tnt-components.tnt-fab:nth-child(#{$i}) {
-//        right: #{(128 * ($i - 1) + 16)}px;
-//    }
-//}
+@for $i from 1 through 10 {
+    .tnt-components.tnt-fab:nth-child(#{$i}) {
+        transform: translateY(calc(-64px * ($i - 1)));
+    }
+
+    .tnt-tab-child {
+        *:nth-child(#{$i} of .tnt-fab) {
+            transform: translateY(calc(-64px * ($i - 1))) !important;
+        }
+    }
+}
