Adjust FAB position when toast container is present
Added a CSS rule to set the `right` property of `.tnt-components.tnt-fab` to `360px` when it is within a `body` containing a `.tnt-toast-container`. This ensures proper positioning of the FAB in the presence of a toast container.

--- a/TnTComponents/Styles/TnTComponents/_buttons.scss
+++ b/TnTComponents/Styles/TnTComponents/_buttons.scss
@@ -89,6 +89,12 @@ body:has(.tnt-footer) {
     }
 }
 
+body:has(.tnt-toast-container) {
+    .tnt-components.tnt-fab {
+        right: 360px;
+    }
+}
+
 
 @for $i from 1 through 10 {
     .tnt-components.tnt-fab:nth-child(#{$i}) {
